The whole site (except for the Printing page and the SideMenu) is wrapper in a "#main" element, which is fixed and has no overflow by default. Define your own overflow.

--- a/style/extra.css
+++ b/style/extra.css
@@ -16,7 +16,8 @@ html,body{
 }
 
 .page{
-	position: fixed;
+	position: absolute;
+	z-index: 0;
 	left: 0;
 	right: 0;
 	top: 0;
